fixed layout option for fluid

--- a/lib/generators/bootstrap/layout/templates/layout.html.erb
+++ b/lib/generators/bootstrap/layout/templates/layout.html.erb
@@ -38,7 +38,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-<%= layout_type %>-top" role="navigation">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -62,8 +62,8 @@
       </div>
     </nav>
 
-    <div class="container">
-      <div class="row">
+    <div class="container<%- if layout_type == "fluid" -%>-fluid<%- end -%>">
+      <div class="row<%- if layout_type == "fluid" -%>-fluid<%- end -%>">
         <div class="col-md-9">
           <%%= bootstrap_flash %>
           <%%= yield %>
